src/snapshots/rplaid__client__tests__can_fetch_single_institution.snap
---
source: src/client.rs
expression: res
---
{
  "institution_id": "ins_129571",
  "name": "Bank21",
  "products": [
    "assets",
    "auth",
    "balance",
    "transactions",
    "signal",
    "identity_match",
    "identity",
    "processor_payments",
    "recurring_transactions",
    "transfer"
  ],
  "country_codes": [
    "US"
  ],
  "url": null,
  "primary_color": null,
  "logo": null,
  "routing_numbers": [
    "011401533",
    "101908988"
  ],
  "oauth": false
}
