src/snapshots/rplaid__client__tests__can_get_multiple_institutions.snap
---
source: src/client.rs
expression: res

---
[
  {
    "institution_id": "ins_129571",
    "name": "Bank21",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity"
    ],
    "country_codes": [
      "US"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": false
  },
  {
    "institution_id": "ins_122874",
    "name": "Banque Populaire - Bourgogne Franche Comté",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122875",
    "name": "Banque Populaire - Auvergne et Rhône-Alpes",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122876",
    "name": "Banque Populaire - Rives de Paris",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122877",
    "name": "Banque Populaire - Val de France",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122878",
    "name": "Banque Populaire - du Nord",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122879",
    "name": "Banque Populaire - Sud",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122880",
    "name": "Banque Populaire - Aquitaine Centre Atlantique",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122881",
    "name": "Banque Populaire - Alsace Lorraine Champagne",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122882",
    "name": "Banque Populaire - Occitane",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  }
]
