src/snapshots/rplaid__client__tests__can_modify_items.snap
---
source: src/client.rs
expression: item
---
{
  "item_id": "[item_id]",
  "institution_id": "ins_129571",
  "webhook": "",
  "error": null,
  "available_products": [
    "assets",
    "balance",
    "identity",
    "transactions"
  ],
  "billed_products": [
    "auth"
  ],
  "consent_expiration_time": null,
  "update_type": "background",
  "status": null
}
