src/snapshots/rplaid__client__tests__can_read_transactions.snap
---
source: src/client.rs
expression: res.transactions
---
[
  {
    "transaction_type": "place",
    "category_id": "17018000",
    "category": [
      "Recreation",
      "Gyms and Fitness Centers"
    ],
    "location": {},
    "payment_meta": {},
    "name": "Touchstone Climbing",
    "account_id": "[account_id]",
    "amount": 78.5,
    "iso_currency_code": "USD",
    "date": "2021-09-05",
    "pending": false,
    "transaction_id": "[transaction_id]",
    "payment_channel": "in store",
    "merchant_name": "Touchstone",
    "authorized_date": "2021-09-04"
  },
  {
    "transaction_type": "special",
    "category_id": "22001000",
    "category": [
      "Travel",
      "Airlines and Aviation Services"
    ],
    "location": {},
    "payment_meta": {},
    "name": "United Airlines",
    "account_id": "[account_id]",
    "amount": -500.0,
    "iso_currency_code": "USD",
    "date": "2021-09-05",
    "pending": false,
    "transaction_id": "[transaction_id]",
    "payment_channel": "in store",
    "merchant_name": "United Airlines",
    "authorized_date": "2021-09-05"
  },
  {
    "transaction_type": "place",
    "category_id": "13005032",
    "category": [
      "Food and Drink",
      "Restaurants",
      "Fast Food"
    ],
    "location": {
      "store_number": "3322"
    },
    "payment_meta": {},
    "name": "McDonald's",
    "account_id": "[account_id]",
    "amount": 12.0,
    "iso_currency_code": "USD",
    "date": "2021-09-04",
    "pending": false,
    "transaction_id": "[transaction_id]",
    "payment_channel": "in store",
    "merchant_name": "McDonald's",
    "authorized_date": "2021-09-04"
  },
  {
    "transaction_type": "place",
    "category_id": "13005043",
    "category": [
      "Food and Drink",
      "Restaurants",
      "Coffee Shop"
    ],
    "location": {},
    "payment_meta": {},
    "name": "Starbucks",
    "account_id": "[account_id]",
    "amount": 4.33,
    "iso_currency_code": "USD",
    "date": "2021-09-04",
    "pending": false,
    "transaction_id": "[transaction_id]",
    "payment_channel": "in store",
    "merchant_name": "Starbucks",
    "authorized_date": "2021-09-04"
  },
  {
    "transaction_type": "place",
    "category_id": "13005000",
    "category": [
      "Food and Drink",
      "Restaurants"
    ],
    "location": {},
    "payment_meta": {},
    "name": "SparkFun",
    "account_id": "[account_id]",
    "amount": 89.4,
    "iso_currency_code": "USD",
    "date": "2021-09-03",
    "pending": false,
    "transaction_id": "[transaction_id]",
    "payment_channel": "in store",
    "merchant_name": "Sparkfun",
    "authorized_date": "2021-09-02"
  },
  {
    "transaction_type": "special",
    "category_id": "21005000",
    "category": [
      "Transfer",
      "Credit"
    ],
    "location": {},
    "payment_meta": {},
    "name": "INTRST PYMNT",
    "account_id": "[account_id]",
    "amount": -4.22,
    "iso_currency_code": "USD",
    "date": "2021-09-02",
    "pending": false,
    "transaction_id": "[transaction_id]",
    "payment_channel": "other",
    "authorized_date": "2021-09-02"
  }
]
