src/snapshots/rplaid__client__tests__can_search_institutions.snap
---
source: src/client.rs
expression: res

---
[
  {
    "institution_id": "ins_122881",
    "name": "Banque Populaire - Alsace Lorraine Champagne",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122880",
    "name": "Banque Populaire - Aquitaine Centre Atlantique",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122875",
    "name": "Banque Populaire - Auvergne et Rhône-Alpes",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122885",
    "name": "Banque Populaire - Banque de Savoie",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122883",
    "name": "Banque Populaire - Grand Ouest",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122884",
    "name": "Banque Populaire - Méditerranée",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122882",
    "name": "Banque Populaire - Occitane",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122876",
    "name": "Banque Populaire - Rives de Paris",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122879",
    "name": "Banque Populaire - Sud",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  },
  {
    "institution_id": "ins_122878",
    "name": "Banque Populaire - du Nord",
    "products": [
      "assets",
      "auth",
      "balance",
      "transactions",
      "identity",
      "payment_initiation"
    ],
    "country_codes": [
      "FR"
    ],
    "url": null,
    "primary_color": null,
    "logo": null,
    "routing_numbers": [],
    "oauth": true
  }
]
